--- a/State/state.html
+++ b/State/state.html
@@ -6,36 +6,39 @@
     <title>Document</title>
   </head>
   <body>
-    <span>Total Clicks: 0</span>
-    <button id="btn">Click me</button>
-  </body>
-  <script
-    crossorigin
-    src="https://unpkg.com/react@18/umd/react.development.js"
-  ></script>
-  <script
-    crossorigin
-    src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-  ></script>
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-  <script type="text/babel">
-    const root = document.getElementById("root");
-    let counter = 0;
-    function countUp() {
-      counter = counter + 1;
+    <div id="root"></div>
+    <script
+      crossorigin
+      src="https://unpkg.com/react@18/umd/react.development.js"
+    ></script>
+    <script
+      crossorigin
+      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
+    ></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script type="text/babel">
+      const root = document.getElementById("root");
+      let counter = 0;
+
+      function countUp() {
+        counter = counter + 1;
+        render();
+      }
+
+      function render() {
+        ReactDOM.createRoot(root).render(<Container />);
+      }
+
+      function Container() {
+        return (
+          <div>
+            <h3>Total Clicks: {counter}</h3>
+            <button onClick={countUp}>Click me</button>
+          </div>
+        );
+      }
+
       render();
-    }
-    function render() {
-      ReactDOM.render(<Container />, root);
-    }
-    function Container() {
-      return (
-        <div>
-          <h3>Total Clicks: {counter}</h3>
-          <button onClick={countUp}>Click me</button>
-        </div>
-      );
-    }
-    render();
-  </script>
+    </script>
+  </body>
 </html>
